# ffmpeg_android

./: .gitignore  CMakeLists.txt  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  FFPlayBuilder.cpp  FFPlayBuilder.h  FFResample.cpp  FFResample.h  GLVideoView.cpp  GLVideoView.h  IAudioPlay.cpp  IAudioPlay.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IObserver.cpp  IObserver.h  IPlayBuilder.cpp  IPlayBuilder.h  IPlayer.cpp  IPlayer.h  IPlayerPorxy.cpp  IPlayerPorxy.h  IResample.cpp  IResample.h  IVideoView.cpp  IVideoView.h  SLAudioPlay.cpp  SLAudioPlay.h  XData.cpp  XData.h  XEGL.cpp  XEGL.h  XLog.cpp  XLog.h  XParameter.cpp  XParameter.h  XShader.cpp  (+6 more)
app/src/main/java/com/example/ffmpegandroid/: MainActivity.java  OpenUrl.java  XPlay.java
app/src/main/res/layout/: activity_main.xml  openurl.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
